Grabbit already is an existing extention. I reversed it. We can come up with a different name later

--- a/index.html
+++ b/index.html
@@ -3,9 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Trackify</title>
+    <title>Grabbit</title>
 </head>
 <body>
-    <p>Trackify Extention</p>
+    <p>Grabbit Extention</p>
 </body>
 </html>
