--- a/index.html
+++ b/index.html
@@ -3,17 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Trackify</title>
+    <title>Grabbit</title>
 </head>
 <body>
-    
-    <div class="Notes">
-        Temporary notes html file placeholder
-    </div>
-    <div class="buttons">
-        temporary buttons html file placeholder
-    </div>
-
-
+    <p>Grabbit Extention</p>
 </body>
 </html>
