--- a/test.html
+++ b/test.html
@@ -1,26 +1,11 @@
-<!-- <iframe src="button.html" width="300" height="200"></iframe> -->
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Website with Sidebar</title>
-  <link rel="stylesheet" href="sidebar.css">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
 </head>
 <body>
-
-  <div class="main-container">
-    <div class="main-content">
-      <h1>Main Content</h1>
-      <p>This is your main content area. It will shrink to make room for the sidebar on the right.</p>
-    </div>
-    <div class="sidebar">
-      <a href="#">Home</a>
-      <a href="#">Notes</a>
-      <a href="#">About</a>
-    </div>
-  </div>
-
+    
 </body>
 </html>
