--- a/index.html
+++ b/index.html
@@ -3,9 +3,18 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Grabbit</title>
+    <title>Trackify</title>
 </head>
 <body>
-    <p>Grabbit Extention</p>
+    
+    <div class="Notes">
+        Temporary notes html file placeholder
+    </div>
+    <div class="buttons">
+        <button>Search</button>
+        <button>Delete</button>
+    </div>
+
+
 </body>
 </html>
