--- a/index.html
+++ b/index.html
@@ -3,9 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Grabbit</title>
+    <link rel="stylesheet" href="css/index.css">
+    <title>Notes</title>
 </head>
 <body>
-    <p>Grabbit Extention</p>
+    <p>This is the note page</p>
 </body>
 </html>
