--- a/test.html
+++ b/test.html
@@ -6,8 +6,10 @@
     <title>Document</title>
     <button>amirs balls</button>
     <Button>Great job guys</Button>
+    <button onclick="openPopup()">Open Popup</button>
+
 </head>
 <body>
-    
+    <p>Temporary placeholder</p>
 </body>
 </html>
