sidebar and index changes

--- a/sidebar.html
+++ b/sidebar.html
@@ -3,17 +3,15 @@
 <head>
   <meta charset="UTF-8">
   <title>Toggle Sidebar</title>
-  <link rel="stylesheet" href="sidebar.css">
+  <link rel="stylesheet" href="css/sidebar.css">
 </head>
 <body>
-
-<button id="toggleButton">Toggle Sidebar</button>
 
 <div class="sidebar"> <!--this button should be in index.html-->
   <h1>Notes</h1>
   <input type="text"></input>
 </div>
 
-<script src="sidebar.js"></script>
+<script src="script/sidebar.js"></script>
 </body>
 </html>
