--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     <div class="buttons">
         <button>Search</button>
         <button>Delete</button>
+        <button onclick="openMenu">Create Note</button>
     </div>
 </body>
 </html>
