Create Note Button
Added Create Note Button which opens a new window to create a note.

--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
+<head defer>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/index.css">
@@ -12,7 +12,8 @@
     <div class="buttons">
         <button>Search</button>
         <button>Delete</button>
-        <button onclick="openMenu()">Create Notes</button>
+        <button id="createNoteButton">Create Note</button>
     </div>
+    <script src="script/index.js"></script>
 </body>
 </html>
