--- a/index.html
+++ b/index.html
@@ -8,13 +8,14 @@
 </head>
 <body>
 
-  <div class="Notes">
+  <div class="Notes"> 
     Temporary notes html file placeholder
   </div>
 
   <div class="buttons">
     <button>Search</button>
     <button>Delete</button>
+    <button id="toggleSidebar">Toggle sidebar</button>
   </div>
 
   <script src="script/popup.js"></script>
