--- a/notes.html
+++ b/notes.html
@@ -7,6 +7,13 @@
     <link rel= "stylesheet" href="css/notes.css">
 </head>
 <body>
-    <textarea id="notes" placeholder="Enter your notes here..."></textarea>
+    <div>
+        <textarea class="container" placeholder="Enter your notes here..."></textarea>
+    </div>
+    <div class="buttons">
+        <button id="saveButton">Save</button>
+        <button id="deleteButton">Delete</button>
+    </div>
+    <script src="script/notes.js"></script>
 </body>
 </html>
