Fixed bugs and updated

--- a/notes.html
+++ b/notes.html
@@ -10,8 +10,8 @@
     <div>
         <textarea class="container" placeholder="Enter your notes here..."></textarea>
     </div>
-    <div class="buttons">
-        <button id="saveButton">Save</button>
+    <div>
+        <button class="buttons">Save</button>
         <button id="deleteButton">Delete</button>
     </div>
     <script src="script/notes.js"></script>
