--- a/index.html
+++ b/index.html
@@ -6,9 +6,12 @@
     <link rel="stylesheet" href="css/index.css">
     <title>Notes</title></head>
 <body>
-    <div class="Notes">
+    
+    <!--Likely useless code:-->
+    <!-- <div class="Notes">
         Temporary notes html file placeholder
-    </div>
+    </div> -->
+
     <div class="buttons">
         <button>Search</button>
         <button>Delete</button>
