--- a/notes.html
+++ b/notes.html
@@ -8,12 +8,13 @@
 </head>
 <body>
     <div>
-        <textarea class="container" placeholder="Enter your notes here..."></textarea>
+        <textarea class="container" id="containerID" placeholder="Enter your notes here..."></textarea>
     </div>
     <div class="buttons">
         <button id="saveButton">Save</button>
         <button id="deleteButton">Delete</button>
     </div>
     <script src="script/notes.js"></script>
+
 </body>
 </html>
