--- a/notes.html
+++ b/notes.html
@@ -8,13 +8,15 @@
 </head>
 <body>
     <div>
-        <textarea class="container" id="containerID" placeholder="Enter your notes here..."></textarea>
+        <textarea id="containerID" class="container" placeholder="Enter your notes here..."></textarea>
     </div>
-    <div class="buttons">
+    <div>
         <button id="saveButton">Save</button>
         <button id="deleteButton">Delete</button>
+        <p id="textOutput"></p>
     </div>
     <script src="script/notes.js"></script>
+    <!-- <script src="script/sidebar.js"></script> -->
 
 </body>
 </html>
