--- a/list.html
+++ b/list.html
@@ -1,3 +1,11 @@
-<div id="list">
-
-</div>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <title>List</title>
+</head>
+<body>
+    <button id="textOutput"></button>
+    <script src="script/notes.js"></script>
+</body>
+</html>
