Unfinished List in sidebar

--- a/sidebar.html
+++ b/sidebar.html
@@ -9,9 +9,11 @@
 
 <div class="sidebar"> <!--this button should be in index.html-->
   <h1>Notes</h1>
-  <input type="text"></input>
+  <input type="text" placeholder="Write here..." style="width: 90%; margin: 10px;">
+  <p>Hellol</p>
+  <button id="textOutput"></button>
 </div>
-
+<script src="script/notes.js"></script>
 <script src="script/sidebar.js"></script>
 </body>
 </html>
