changed notes so that the values entered are saved to local storage
1) changed textarea to an input element
2) added a message system that sends values from notes.js to background.js
3) added a message receiving system to save notes from notes.js into local storage

--- a/notes.html
+++ b/notes.html
@@ -8,7 +8,8 @@
 </head>
 <body>
     <div>
-        <textarea class="container" placeholder="Enter your notes here..."></textarea>
+        <!-- <textarea class="container" id="note_area" placeholder="Enter your notes here..."></textarea> -->
+        <input type="text" class="container" id="note_area" placeholder="Enter your notes here...">
     </div>
     <div class="buttons">
         <button id="saveButton">Save</button>
