--- a/notes.html
+++ b/notes.html
@@ -7,14 +7,14 @@
     <link rel= "stylesheet" href="css/notes.css">
 </head>
 <body>
-    <div>
-        <!-- <textarea class="container" id="note_area" placeholder="Enter your notes here..."></textarea> -->
-        <input type="text" class="container" id="note_area" placeholder="Enter your notes here...">
+    <div class="input_area">
+        <input type="text" id="title_area" class="container" placeholder="Enter your title here...">
+        <textarea class="container" id="note_area" placeholder="Enter your notes here..."></textarea>
     </div>
     <div class="buttons">
         <button id="saveButton">Save</button>
         <button id="deleteButton">Delete</button>
     </div>
-    <script src="script/notes.js"></script>
+    <script src="script/notes.js" type="module"></script>
 </body>
 </html>
