--- a/sidebar.html
+++ b/sidebar.html
@@ -12,6 +12,6 @@
   <input type="text"></input>
 </div>
 
-<script src="script/sidebar.js"></script>
+<script type="module" src="script/sidebar.js"></script>
 </body>
 </html>
