Save notes completed
When save button is pressed, all input from notes is saved onto chrome.storage.local and then immediately displayed as a button on sidebar. When button is clicked, contents are saved. This saving feature can be removed. A delete button must be developed now

--- a/list.html
+++ b/list.html
@@ -1,11 +1,11 @@
-<!DOCTYPE html>
+<!-- <!DOCTYPE html>
 <html lang="en">
 <head>
   <meta charset="UTF-8">
   <title>List</title>
 </head>
 <body>
-    <button id="textOutput"></button>
+    <button id="notesContainer"></button> 
     <script src="script/notes.js"></script>
 </body>
-</html>
+</html> -->
