--- a/notes.html
+++ b/notes.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Notes</title>
-    <link rel= "stylesheet" href="css/notes.css">
+    <link rel="stylesheet" href="css/notes.css">
 </head>
 <body>
     <div>
@@ -15,6 +15,25 @@
         <button id="deleteButton">Delete</button>
     </div>
     <script src="script/notes.js"></script>
-
 </body>
 </html>
+<!-- <!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Notes</title>
+    <link rel= "stylesheet" href="css/notes.css">
+</head>
+<body>
+    <div>
+        <textarea id="noteInput" class="container" placeholder="Enter your notes here..."></textarea>
+    </div>
+    <div>
+        <button id="sabeNoteBut">Save</button>
+        <button id="deleteButton">Delete</button>
+    </div>
+    <script src="script/notes.js"></script>
+
+</body>
+</html> -->
