--- a/index.html
+++ b/index.html
@@ -3,15 +3,10 @@
 <head defer>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="css/index.css">
-    <link rel="stylesheet" href="css/sidebar.css">
+    <link rel="stylesheet" href="/css/index.css">
+    <link rel="stylesheet" href="/css/sidebar.css">
     <title>Notes</title></head>
 <body>
-    
-    <!--Likely useless code:-->
-    <!-- <div class="Notes">
-        Temporary notes html file placeholder
-    </div> -->
 
     <div class="buttons">
         <button>Search</button>
@@ -21,7 +16,7 @@
 
 
     </div>
-    <script src="script/index.js"></script>
+    <script src="/script/index.js"></script>
     <!-- <script src="script/popup.js"></script> -->
 
 
