+ sign is right of 'My Notes'
Replaced sidebar.innerHYML with individual objects which allowed 'My Notes' and '+' too be easily placed side by side by using individual objects and styling functions.

--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
 <head defer>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/css/index.css">
-    <link rel="stylesheet" href="/css/sidebar.css">
+    <link rel="stylesheet" href="css/index.css">
+    <!-- <link rel="stylesheet" href="/css/sidebar.css"> -->    <!--Not used-->
     <title>Notes</title></head>
 <body>
 
@@ -16,9 +16,7 @@
 
 
     </div>
-    <script src="/script/index.js"></script>
-    <!-- <script src="script/popup.js"></script> -->
-
+    <script src="script/index.js"></script>
 
 </body>
 </html>
