changed note to a dict type, added titlel and content to note.html
- Added an input for title in note.html
- Changed styling, id, and classes in note.html and note.css
- changed the note object into a dict in the form of {id, title, content}
- note id is a number representing the exact time it was created

--- a/notes.html
+++ b/notes.html
@@ -7,10 +7,11 @@
     <link rel="stylesheet" href="css/notes.css">
 </head>
 <body>
-    <div>
-        <textarea id="containerID" class="container" placeholder="Enter your notes here..."></textarea>
+    <div id="note_container">
+        <input id="title_input" type="text" placeholder="Enter your note title">
+        <textarea id="content" class="container" placeholder="Enter your notes here..."></textarea>
     </div>
-    <div>
+    <div id="button_container">
         <button id="saveButton">Save</button>
         <button id="deleteButton">Delete</button>
     </div>
