Save Highlighted Text
Highlighted text is displayed under content textbox in notes.html. When notes.html is opened another way, nothing is added. Next steps are saving the highlighted text as a value on a bookmark on sidebar

--- a/notes.html
+++ b/notes.html
@@ -11,6 +11,9 @@
         <input id="title_input" type="text" placeholder="Enter your note title">
         <textarea id="content" class="container" placeholder="Enter your notes here..."></textarea>
     </div>
+    <div id="note_list_container">
+        <p id="highlightedText"></p>
+    </div>
     <div id="button_container">
         <button id="saveButton">Save</button>
         <button id="deleteButton">Delete</button>
