Create Category button works
Create empty buttons & alert which is selected

--- a/notes.html
+++ b/notes.html
@@ -12,6 +12,11 @@
         <input id="title_input" type="text" placeholder="Enter your note title">
         <textarea id="content" class="container" placeholder="Enter your notes here..."></textarea>
     </div>
+    <div id="category_container">
+        <button id="categoryButton">Create Category</button>
+        <div id="category_buttons"></div>
+    </div>
+
     <div id="button_container">
         <button id="saveButton">Save</button>
         <button id="deleteButton">Delete</button>
